// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced example 1`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
    <button
      onClick={[Function]}
    >
      Birds
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
  <div
    className="MuiDrawer-root MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style={
        Object {
          "pointerEvents": "",
          "visibility": undefined,
        }
      }
    >
      <div
        className="panel"
      >
        <img
          alt="Bean"
          src="/aux-router/dog1.png"
        />
        <p>
          Name: 
          Bean
        </p>
        <p>
          Age: 
          5
        </p>
        <button
          onClick={[Function]}
        >
          Close
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Advanced example 2`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
    <button
      onClick={[Function]}
    >
      Birds
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
  <div
    className="MuiDrawer-root MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style={
        Object {
          "pointerEvents": "",
          "visibility": undefined,
        }
      }
    >
      <div
        className="panel"
      >
        <img
          alt="Bean"
          src="/aux-router/dog1.png"
        />
        <p>
          Name: 
          Bean
        </p>
        <p>
          Age: 
          5
        </p>
        <button
          onClick={[Function]}
        >
          Close
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Advanced example 3`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
    <button
      onClick={[Function]}
    >
      Birds
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
]
`;

exports[`Advanced example 4`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
    <button
      onClick={[Function]}
    >
      Birds
    </button>
  </nav>,
  <section>
    <h1>
      Dogs
    </h1>
    <ul>
      <li>
        <img
          alt="Bean"
          src="/aux-router/dog1.png"
        />
        <div>
          <h2>
            Bean
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Bella"
          src="/aux-router/dog2.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Axel"
          src="/aux-router/dog3.png"
        />
        <div>
          <h2>
            Axel
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Odie"
          src="/aux-router/dog4.png"
        />
        <div>
          <h2>
            Odie
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Sheba"
          src="/aux-router/dog5.png"
        />
        <div>
          <h2>
            Sheba
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
    </ul>
  </section>,
]
`;

exports[`Advanced example 5`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
    <button
      onClick={[Function]}
    >
      Birds
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
]
`;

exports[`Advanced example 6`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
    <button
      onClick={[Function]}
    >
      Birds
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
  <div
    className="MuiDrawer-root MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style={
        Object {
          "pointerEvents": "",
          "visibility": undefined,
        }
      }
    >
      <div
        className="panel"
      >
        <img
          alt="Bean"
          src="/aux-router/dog1.png"
        />
        <p>
          Name: 
          Bean
        </p>
        <p>
          Age: 
          5
        </p>
        <button
          onClick={[Function]}
        >
          Close
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Advanced example 7`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
]
`;

exports[`Advanced example 8`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
  </nav>,
  <section>
    <h1>
      Cats
    </h1>
    <ul>
      <li>
        <img
          alt="Bella"
          src="/aux-router/cat1.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Kitty"
          src="/aux-router/cat2.png"
        />
        <div>
          <h2>
            Kitty
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Charlie"
          src="/aux-router/cat3.png"
        />
        <div>
          <h2>
            Charlie
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Leo"
          src="/aux-router/cat4.png"
        />
        <div>
          <h2>
            Leo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Milo"
          src="/aux-router/cat5.png"
        />
        <div>
          <h2>
            Milo
          </h2>
          <button
            onClick={[Function]}
          >
            Open modal
          </button>
        </div>
      </li>
    </ul>
  </section>,
  <div>
    <div
      className="panel"
    >
      <img
        alt="Bean"
        src="/aux-router/dog1.png"
      />
      <p>
        Name: 
        Bean
      </p>
      <p>
        Age: 
        5
      </p>
      <button
        onClick={[Function]}
      >
        Close
      </button>
    </div>
  </div>,
  <div>
    <div
      className="modal"
    >
      <img
        alt="Kitty"
        src="/aux-router/cat2.png"
      />
      <p>
        Name: 
        Kitty
      </p>
      <p>
        Age: 
        2
      </p>
      <button
        onClick={[Function]}
      >
        Close
      </button>
    </div>
  </div>,
]
`;

exports[`Advanced example 9`] = `
Array [
  <nav>
    <button
      onClick={[Function]}
    >
      Cats
    </button>
    <button
      onClick={[Function]}
    >
      Dogs
    </button>
  </nav>,
  <section>
    <h1>
      Dogs
    </h1>
    <ul>
      <li>
        <img
          alt="Bean"
          src="/aux-router/dog1.png"
        />
        <div>
          <h2>
            Bean
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Bella"
          src="/aux-router/dog2.png"
        />
        <div>
          <h2>
            Bella
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Axel"
          src="/aux-router/dog3.png"
        />
        <div>
          <h2>
            Axel
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Odie"
          src="/aux-router/dog4.png"
        />
        <div>
          <h2>
            Odie
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
      <li>
        <img
          alt="Sheba"
          src="/aux-router/dog5.png"
        />
        <div>
          <h2>
            Sheba
          </h2>
          <button
            onClick={[Function]}
          >
            Open panel
          </button>
        </div>
      </li>
    </ul>
  </section>,
  <div>
    <div
      className="panel"
    >
      <img
        alt="Bean"
        src="/aux-router/dog1.png"
      />
      <p>
        Name: 
        Bean
      </p>
      <p>
        Age: 
        5
      </p>
      <button
        onClick={[Function]}
      >
        Close
      </button>
    </div>
  </div>,
  <div>
    <div
      className="modal"
    >
      <img
        alt="Kitty"
        src="/aux-router/cat2.png"
      />
      <p>
        Name: 
        Kitty
      </p>
      <p>
        Age: 
        2
      </p>
      <button
        onClick={[Function]}
      >
        Close
      </button>
    </div>
  </div>,
]
`;

exports[`AuxLink renders correctly 1`] = `
<button
  onClick={[Function]}
>
  Component A - one
</button>
`;

exports[`AuxRoute does not render when path is empty 1`] = `null`;

exports[`AuxRoute renders nested component when path contains correct data 1`] = `
Array [
  <p>
    One
  </p>,
  <p>
    Two
  </p>,
]
`;

exports[`AuxRoute renders nested component when path contains several independent routes 1`] = `
<p>
  Two
</p>
`;

exports[`AuxRoute renders when path contains correct data 1`] = `
<p>
  One
</p>
`;
